fix z-index priority issue between projects and contact sections

--- a/src/app/main/components/contact/contact.component.scss
+++ b/src/app/main/components/contact/contact.component.scss
@@ -8,6 +8,7 @@
     align-items: center;
     width: 22rem;
     height: 33rem;
+    z-index: 45;
 
     &.s-device {
       left: 20%;
